--- a/app/index.html
+++ b/app/index.html
@@ -85,8 +85,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/hide.js"></script>
+
         <!-- endbuild -->
         <scripts src="scripts/angular-route.min.js"></scripts>
         <scripts src="scripts/controllers/controller.js"></scripts>
+        <scripts src="scripts/controllers/appSecond.js"></scripts>
+
+        
 </html>
