Add validations to forms

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,6 @@
     <div ng-view="" class="main-view"></div>
 
 
-
-
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
@@ -85,11 +83,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/shop.js"></script>
+        <script src="scripts/services/loginService.js"></script>
         <!-- endbuild -->
-        <scripts src="scripts/angular-route.min.js"></scripts>
-        <scripts src="scripts/controllers/controller.js"></scripts>
-        <scripts src="scripts/controllers/appSecond.js"></scripts>
-
         
 </html>
