--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel='stylesheet' href='bower_components/ng-dialog/css/ngDialog.css' />
+    <link rel='stylesheet' href='bower_components/ng-dialog/css/ngDialog-theme-default.css' />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -48,6 +50,7 @@
               <li><a href="#/home">Home</a></li>
               <li><a href="#/login">Login</a></li>
               <li><a href="#/registration">Registration</a></li>
+              <li><a href="#/test">Tests</a></li>
             </ul>
           </div>
         </div>
@@ -79,6 +82,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -87,6 +91,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/shop.js"></script>
+        <script src="scripts/controllers/test.js"></script>
         <script src="scripts/services/loginService.js"></script>
         <!-- endbuild -->
         
